<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="5dp"
    android:tag="smsmsm"
    android:background="#fff"
    android:nestedScrollingEnabled="true"
    android:orientation="vertical"
    android:padding="8dp"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">


    <LinearLayout
        android:id="@+id/linttt"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btncancel_bottomsheet"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_centerInParent="true"
                android:background="@drawable/savemasterdown_btn_bg"
                android:backgroundTint="@color/white"
                android:elevation="5dp"
                android:foreground="@drawable/savemasterdown_close_24p"
                android:foregroundTint="@color/colorPrimary"
                android:textColor="#D81313" />

            <Button
                android:id="@+id/btnopen_bottomsheet"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:background="@drawable/savemasterdown_btn_bg"
                android:backgroundTint="@color/white"
                android:elevation="5dp"
                android:foreground="@drawable/savemasterdown_seline_expand_less_24"
                android:foregroundTint="@color/colorPrimary"
                android:textColor="#D81313" />
        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:weightSum="2">

          <!--  <ImageView
                android:id="@+id/bottomsheet_thumbnail"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_weight="0"
                android:padding="5dp"
                android:src="@drawable/ic_appicon" />-->

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/linttt"
                android:layout_gravity="center_vertical"
                android:layout_weight="2"
                android:orientation="vertical"
                android:paddingStart="10dp"
                android:weightSum="2">


                <TextView
                    android:id="@+id/bottomsheet_title"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/titsavemasterdown_le"
                    android:textAlignment="center"
                    android:textSize="15dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/bottomsheet_duration"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/dursavemasterdown_ation"
                    android:textAlignment="center"
                    android:textSize="15dp"
                    android:textStyle="bold" />


            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:layout_weight="2"
                android:text="@string/selecsavemasterdown_t_quality"
                android:textColor="#444"
                android:textSize="18dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/source_bottomsheet"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/sosavemasterdown_urce"
                android:textSize="15dp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linbbb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linttt"
        android:layout_gravity="center_vertical"
        android:background="@drawable/savemasterdown_tablview_border"
        android:orientation="horizontal"

        android:weightSum="3">


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ressavemasterdown_olution"
            android:textAlignment="center"
            android:textSize="15dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"

            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/filsavemasterdown_esize"
            android:textAlignment="center"
            android:textSize="15dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"

            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dosavemasterdown_wnload"
            android:textAlignment="center"
            android:textSize="15dp"
            android:textStyle="bold" />


    </LinearLayout>

   <!-- <LinearLayout
        android:id="@+id/linbbb2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linbbb"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        android:weightSum="3">


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/audio_text"
            android:textAlignment="center"
            android:textSize="15dp"
            android:textStyle="bold" />


    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recqualitybottomsheet_aud"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linbbb2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:nestedScrollingEnabled="true" />-->


    <LinearLayout
        android:id="@+id/linbbb3"
        android:layout_below="@id/linbbb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        android:weightSum="3">


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/videosavemasterdown_s_text"
            android:textAlignment="center"
            android:textSize="15dp"
            android:textStyle="bold" />


    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recqualitybottomsheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linbbb3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:nestedScrollingEnabled="true" />


</RelativeLayout>